gitops-repo/clusters/example-product/infra/secret-sync-pull.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-sync-pull
  namespace: product-example
  labels:
    app.kubernetes.io/name: secret-sync-pull
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secret-sync-pull
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secret-sync-pull
    spec:
      serviceAccountName: secret-sync-pull
      containers:
        - name: secret-sync-controller
          image: docker.io/obegron/secret-sync-controller:0.2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
