gitops-repo/clusters/example-product/infra/networkpolicy-argocd-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vcluster-api-from-argocd-and-tekton
  namespace: product-example
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vcluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tekton-pipelines
      ports:
        - protocol: TCP
          port: 443
